fix: spacing issue for Tools I use and My Joruney

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -270,7 +270,12 @@
   font-family: var(--font-heading);
   text-align: center;
   margin-bottom: var(--space-md);
-  padding-left: 100px;
+}
+
+
+.timeline-column .section-heading {
+  text-align: left;
+  padding-left: 250px;
 }
 
 /* === SYNTAX HIGHLIGHTING === */
